--- a/metadata.yaml
+++ b/metadata.yaml
@@ -26,6 +26,7 @@ subjects:
 - !lcsh 'Secession'
 - !lcc 'JK'
 - !lcsh 'Nullification (States'' rights)'
+- GITenberg
 title: "Nullification, Secession, Webster's Argument, and the Kentucky and Virginia\
   \ Resolutions\r\nConsidered in Reference to the Constitution and Historically"
 url: http://www.gutenberg.org/ebooks/41673
